scores api, finish tests next
